# ufc-data-scraper

./: README.md  pyproject.toml  requirements.txt  setup.py  ufc_scraper.py
models/: __init__.py  base.py
models/event/: __init__.py  accolade.py  card_segment.py  event.py  fight.py  fight_score.py  fighter_stats.py  location.py  result.py  rule_set.py  weight_class.py
models/fighter/: __init__.py  fighter.py  grappling.py  physical_stats.py  record.py  strike_position.py  strike_target.py  striking.py  win_method.py
scraper/: __init__.py  event_scraper.py  fighter_scraper.py  fmid_finder.py
src/ufc_data_scraper/: ufc_scraper.py
src/ufc_data_scraper/data/: incorrect_names.json  incorrect_urls.json
src/ufc_data_scraper/data_models/: base.py
src/ufc_data_scraper/exceptions/: __init__.py  exceptions.py
src/ufc_data_scraper/scraper/: __init__.py  event_scraper.py  fighter_scraper.py  fmid_finder.py
src/ufc_data_scraper/tests/: test_data_model_base.py  (+5 more)
tests/: test_event_fmid_finder.py  test_event_scraper.py  test_fighter_scraper.py  test_utils.py
ufc_data_scraper/: __init__.py  ufc_scraper.py
ufc_data_scraper/crawler/: event_crawler.py
ufc_data_scraper/custom_objects/: base_object.py  event.py  fighter.py
ufc_data_scraper/data/: incorrect_urls.json
ufc_data_scraper/data_models/: __init__.py  base.py
ufc_data_scraper/models/: base.py  event.py  fighter.py
ufc_data_scraper/scraper/: __init__.py  event_fmid_finder.py  event_scraper.py  fighter_scraper.py  fmid_finder.py  incorrect_fighter_urls.py  utils.py
ufc_data_scraper/tests/: test_event_crawler.py  test_event_fmid_finder.py  test_event_scraper.py  test_fighter_scraper.py  test_utils.py
ufc_data_scraper/utils/: __init__.py  utils.py
(+62 files in other folders)
