[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ufc_data_scraper"
version = "1.0.7"
authors = [
  { name="Kyle Leben", email="leben.kyle.hex@gmail.com" },
]
description = "A simple webscraping library, focused on the UFC website"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests", 
  "bs4", 
  "pytz", 
  "unidecode"
]

[project.urls]
"Homepage" = "https://github.com/HeXeDMinD/ufc-data-scraper"
"Bug Tracker" = "https://github.com/HeXeDMinD/ufc-data-scraper/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ufc_data_scraper*"]
exclude = ["ufc_data_scraper.tests", "ufc_data_scraper.data"]
namespaces = false